<resources>
    <string name="app_name">Just Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">About</string>
    <string name="about_info">This is app is just a test shopping app with dummy products and information.
    This app is intended for educational use only.</string>
    <string name="app_version">App Version: v 0.1</string>
    <string name="author">Author: Justice Yeboah</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="cart_empty">Your cart is empty</string>
    <string name="title_activity_settings">Settings</string>
    <string name="update_details">Update Your Details</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="youremail">youremail@mail.com</string>
    <string name="new_password">New Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="update_address">Update your address</string>
    <string name="update_phone_number">Update phone number</string>
    <string name="update">Update</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="no_orders">No orders available for this account</string>
    <string name="products">Products</string>
    <string name="account_settings">Account Settings</string>
    <string name="your_orders">Your Orders</string>
    <string name="edit_account">Edit Account</string>
</resources>
