<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menus_hopping_basket"
            android:title="@string/products" />
    </group>

    <item android:title="@string/account_settings">
        <menu>
            <item
                android:id="@+id/nav_order"
                android:icon="@drawable/ic_menu_order"
                android:title="@string/your_orders" />
            <item
                android:id="@+id/nav_account_edit"
                android:icon="@drawable/ic_menu_account"
                android:title="@string/edit_account" />
        </menu>
    </item>

</menu>
